--- a/02ENL.ipynb
+++ b/02ENL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ENL_cerrados.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP0JGY3ttrUEYBo7XH005gc",
+      "authorship_tag": "ABX9TyPDDv/mgax9Nhvka2IT2skE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,9 +31,9 @@
       },
       "source": [
         "import numpy as np\n",
-        "import pandas as pd"
+        "from tabulate import tabulate"
       ],
-      "execution_count": 38,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -72,21 +72,21 @@
         "    raise Exception('') #<---- escriba el mensaje de error en intervalo\n",
         "  x=x0\n",
         "  it=0\n",
-        "  tabla=pd.DataFrame(columns=['x0','x','x1','f(x0)','f(x)','f(x1)'])\n",
+        "  tabla=[]\n",
+        "  columnas=['x0','x','x1','f(x0)','f(x)','f(x1)']\n",
         "  while np.abs(f(x))>tol:\n",
-        "    x= #<--- escriba el calculo de x (mitad del intervalo)\n",
-        "    iter=pd.DataFrame({'x0':x0,'x':x,'x1':x1,\n",
-        "                        'f(x0)':f(x0),'f(x)':f(x),'f(x1)':f(x1)},index=[it])\n",
-        "    tabla = pd.concat([tabla,iter],ignore_index=True,join='outer')\n",
+        "    x = #<--- escriba el calculo de x (mitad del intervalo)\n",
+        "    iter = [x0,x,x1,f(x0),f(x),f(x1)]\n",
+        "    tabla.append(iter)\n",
         "    it+=1\n",
         "    if f(x0)*f(x)<0:\n",
         "      x1= #<---- [x0,x->x1]\n",
         "    else:\n",
         "      x0= #<---- [x->x0,x1]\n",
-        "\n",
-        "  return x #<--- regresar la tabla de iteraciones"
+        "  print(tabulate(tabla,columnas,showindex=True))\n",
+        "  return x"
       ],
-      "execution_count": 60,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -108,7 +108,7 @@
       "metadata": {
         "id": "2E7syQOuSUxE"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -132,9 +132,8 @@
     {
       "cell_type": "code",
       "source": [
-        "r,t= #<--- hacer la llamada a la funcion biseccion\n",
-        "print(r)\n",
-        "t"
+        "r=  #<--- hacer la llamada a la funcion biseccion\n",
+        "print(r)"
       ],
       "metadata": {
         "id": "FNDUpCCI3RGf"
@@ -184,30 +183,29 @@
         "    raise Exception('') #<---- escriba el mensaje de error del intervalo\n",
         "  x = x0\n",
         "  it = 0\n",
-        "  tabla=pd.DataFrame(columns=['x0','x','x1','f(x0)','f(x)','f(x1)'])\n",
+        "  tabla=[]\n",
+        "  columnas=['x0','x','x1','f(x0)','f(x)','f(x1)']\n",
         "  while np.abs(f(x))>tol:\n",
-        "    x= #Escriban aqui la ecuacion para calcular x\n",
-        "    iter=pd.DataFrame({'x0':x0,'x':x,'x1':x1,\n",
-        "                        'f(x0)':f(x0),'f(x)':f(x),'f(x1)':f(x1)},index=[it])\n",
-        "    tabla = pd.concat([tabla,iter],ignore_index=True,join='outer')\n",
+        "    x=(x0+x1)/2 #Escriban aqui la ecuacion para calcular x\n",
+        "    iter=[x0,x,x1,f(x0),f(x),f(x1)]\n",
+        "    tabla.append(iter)\n",
         "    it+=1\n",
         "    if f(x0)*f(x)<0:\n",
-        "      x1= #<---- [x0,x->x1]\n",
+        "      x1= x#<---- [x0,x->x1]\n",
         "    else:\n",
-        "      x0= #<---- [x->x0,x1]\n",
-        "\n",
+        "      x0= x#<---- [x->x0,x1]\n",
+        "  print(tabulate(tabla,columnas,showindex=True))\n",
         "  return x #<---- retornar la tabla de iteraciones"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "f = #<--- definir la funcion a resolver\n",
-        "r,t= #<--- hacer la llamada a la funcion reglafalsa\n",
-        "print(r)\n",
-        "t"
+        "r = #<--- hacer la llamada a la funcion reglafalsa\n",
+        "print(r)"
       ],
       "metadata": {
         "id": "MbwOGTmVgpLK"
@@ -239,30 +237,29 @@
         "id": "1tyuyuO0Nr_k"
       },
       "source": [
+        "from plotly.io import show\n",
         "def nr(f,df,x,tol=1e-5):\n",
-        "  tabla=pd.DataFrame(columns=['x','f(x)','df(x)'])\n",
+        "  tabla = []\n",
+        "  columnas=['x','f(x)','df(x)']\n",
         "  it = 0\n",
         "  while np.abs(f(x))>tol:\n",
-        "    x= #<--- calculo de x\n",
-        "    iter=pd.DataFrame({'x':x,\n",
-        "                        'f(x)':f(x),\n",
-        "                        'df(x)':df(x)},\n",
-        "                       index=[it])\n",
-        "    tabla = pd.concat([tabla,iter],ignore_index=True,join='outer')\n",
-        "    it+=1\n",
-        "  return x #<---- retornar la tabla de iteraciones"
+        "    x = #<--- calculo de x\n",
+        "    iter = [x,f(x),df(x)]\n",
+        "    tabla.append(iter)\n",
+        "    it += 1\n",
+        "  print(tabulate(tabla,columnas,showindex=True))\n",
+        "  return x"
       ],
-      "execution_count": 65,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "f =  #<--- defina la funcion a resolver\n",
-        "df =  #<--- definir la derivada\n",
-        "r,t =  #<--- hacer la llamada al metodo de newton-raphson\n",
-        "print(r)\n",
-        "t"
+        "f = #<--- defina la funcion a resolver\n",
+        "df = #<--- definir la derivada\n",
+        "r = #<--- hacer la llamada al metodo de newton-raphson\n",
+        "print(r)"
       ],
       "metadata": {
         "id": "H-cPy6xehgwy"
@@ -289,29 +286,27 @@
         "def secante(f,x0,x1,tol=1e-5):\n",
         "  x = x0\n",
         "  it = 0\n",
-        "  tabla=pd.DataFrame(columns=['x0','x1','x','f(x0)','f(x1)','f(x)'])\n",
+        "  tabla=[]\n",
+        "  columnas=['x0','x1','x','f(x0)','f(x1)','f(x)']\n",
         "  while np.abs(f(x))>tol:\n",
-        "    x= #Escriban aqui la ecuacion para calcular x\n",
-        "    iter=pd.DataFrame({'x0':x0,'x1':x1,'x':x,\n",
-        "                        'f(x0)':f(x0),'f(x1)':f(x1),'f(x)':f(x)},\n",
-        "                       index=[it])\n",
-        "    tabla = pd.concat([tabla,iter],ignore_index=True,join='outer')\n",
-        "    it+=1\n",
-        "    x0= #<---- asignar el valor de x1\n",
-        "    x1= #<---- asignar el valor de x\n",
-        "\n",
-        "  return x #<---- retornar la tabla de iteraciones"
+        "    x = #Escriban aqui la ecuacion para calcular x\n",
+        "    iter = [x0,x1,x,f(x0),f(x1),f(x)]\n",
+        "    tabla.append(iter)\n",
+        "    it += 1\n",
+        "    x0 = #<---- asignar el valor de x1\n",
+        "    x1 = #<---- asignar el valor de x\n",
+        "  print(tabulate(tabla,columnas,showindex=True))\n",
+        "  return x"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "f =  #<--- defina la funcion a resolver\n",
-        "r,t =  #<--- hacer la llamada al metodo de secante\n",
-        "print(r)\n",
-        "t"
+        "r =  #<--- hacer la llamada al metodo de secante\n",
+        "print(r)"
       ],
       "metadata": {
         "id": "rkI9SYpGje8k"
@@ -335,31 +330,31 @@
       },
       "source": [
         "def muller(f,x0,x1,x2,tol=1e-5):\n",
-        "  tabla=pd.DataFrame(columns=['x0','x1','x2','x3','f(x0)','f(x1)','f(x2)','f(x3)'])\n",
+        "  tabla=[]\n",
+        "  columnas=['x0','x1','x2','x3','f(x0)','f(x1)','f(x2)','f(x3)']\n",
         "  x3 = x0\n",
         "  it = 0\n",
         "  while np.abs(f(x3))>tol:\n",
-        "    d1= #<--- calcular la diferencia f[x1,x0]\n",
-        "    d2= #<--- calcular la diferencia f[x2,x1]\n",
-        "    d3= #<--- calcular la segunda diferencia f[x2,x1,x0]\n",
-        "    a=d3\n",
-        "    b=d1-a*(x0+x1)\n",
-        "    c=f(x0)+x0*(a*x1-d1)\n",
-        "    den1=-b+np.sqrt(b**2-4*a*c+0j)\n",
-        "    den2=-b-np.sqrt(b**2-4*a*c+0j)\n",
+        "    d1 = #<--- calcular la diferencia f[x1,x0]\n",
+        "    d2 = #<--- calcular la diferencia f[x2,x1]\n",
+        "    d3 = #<--- calcular la segunda diferencia f[x2,x1,x0]\n",
+        "    a = d3\n",
+        "    b = d1-a*(x0+x1)\n",
+        "    c = f(x0)+x0*(a*x1-d1)\n",
+        "    den1 =-b+np.sqrt(b**2-4*a*c+0j)\n",
+        "    den2 =-b-np.sqrt(b**2-4*a*c+0j)\n",
         "    if np.abs(den1)>np.abs(den2):\n",
-        "      x3= #<--- calcular x3 = 2c/den1\n",
+        "      x3 = #<--- calcular x3 = 2c/den1\n",
         "    else:\n",
-        "      x3= #<--- calcular x3 = 2c/den2\n",
-        "    iter=pd.DataFrame({'x0':x0,'x1':x1,'x2':x2,'x3':x3,\n",
-        "                        'f(x0)':f(x0),'f(x1)':f(x1),'f(x2)':f(x2),'f(x3)':f(x3)},\n",
-        "                       index=[it])\n",
-        "    tabla = pd.concat([tabla,iter],ignore_index=True,join='outer')\n",
-        "    it+=1\n",
-        "    x0= #<--- asignar x1\n",
-        "    x1= #<--- asignar x2\n",
-        "    x2= #<--- asignar x3\n",
-        "  return x3 #<--- devolver la tabla de iteraciones"
+        "      x3 = #<--- calcular x3 = 2c/den2\n",
+        "    iter = [x0,x1,x2,x3,f(x0),f(x1),f(x2),f(x3)]\n",
+        "    tabla.append(iter)\n",
+        "    it += 1\n",
+        "    x0 = #<--- asignar x1\n",
+        "    x1 = #<--- asignar x2\n",
+        "    x2 = #<--- asignar x3\n",
+        "  print(tabulate(tabla,columnas,showindex=True))\n",
+        "  return x3"
       ],
       "execution_count": null,
       "outputs": []
@@ -368,9 +363,8 @@
       "cell_type": "code",
       "source": [
         "f =  #<--- defina la funcion a resolver\n",
-        "r,t =  #<--- hacer la llamada al metodo de muller\n",
-        "print(r)\n",
-        "t"
+        "r =  #<--- hacer la llamada al metodo de muller\n",
+        "print(r)"
       ],
       "metadata": {
         "id": "uxg5Y_SajpTn"
@@ -394,17 +388,16 @@
       },
       "source": [
         "def puntofijo(x,g,tol=1e-5):\n",
-        "  tabla=pd.DataFrame(columns=['x','g(x)'])\n",
+        "  tabla=[]\n",
+        "  columnas=['x','g(x)']\n",
         "  it = 0\n",
         "  while np.abs(x-g(x))>tol:\n",
         "    x= #<--- calcular x\n",
-        "    iter=pd.DataFrame({'x':x,\n",
-        "                        'g(x)':g(x)},\n",
-        "                       index=[it])\n",
-        "    tabla = pd.concat([tabla,iter],ignore_index=True,join='outer')\n",
+        "    iter=[x,g(x)]\n",
+        "    tabla.append(iter)\n",
         "    it+=1\n",
-        "\n",
-        "  return x,tabla"
+        "  print(tabulate(tabla,columnas,showindex=True))\n",
+        "  return x"
       ],
       "execution_count": null,
       "outputs": []
@@ -439,20 +432,20 @@
       },
       "source": [
         "def wegstein(x0,g,tol=1e-5):\n",
-        "  tabla=pd.DataFrame(columns=['x3','g(x3)'])\n",
+        "  tabla=[]\n",
+        "  columnas=['x3','g(x3)']\n",
         "  x1=g(x0)\n",
         "  x2=g(x1)\n",
         "  x3=x2\n",
         "  while np.abs(x3-g(x3))>tol:\n",
         "    x3 =( x1*g(x2)-x2*g(x1))/(x1 -g(x1)-x2+g(x2))\n",
-        "    iter=pd.DataFrame({'x3':x3,\n",
-        "                        'g(x3)':g(x3)},\n",
-        "                       index=[it])\n",
-        "    tabla = pd.concat([tabla,iter],ignore_index=True,join='outer')\n",
+        "    iter=[x3,g(x3)]\n",
+        "    tabla.append(iter)\n",
         "    it+=1\n",
         "    x1=x2\n",
         "    x2=x3\n",
-        "  return x3,tabla"
+        "  print(tabulate(tabla,columnas,showindex=True))\n",
+        "  return x3"
       ],
       "execution_count": null,
       "outputs": []
@@ -461,9 +454,8 @@
       "cell_type": "code",
       "source": [
         "f =  #<--- defina la funcion a resolver\n",
-        "r,t =  #<--- hacer la llamada al metodo de wegstein\n",
-        "print(r)\n",
-        "t"
+        "r =  #<--- hacer la llamada al metodo de wegstein\n",
+        "print(r)"
       ],
       "metadata": {
         "id": "0ywnPEs4jyv1"
@@ -498,7 +490,7 @@
         "def f(x):\n",
         "  return x**2-2"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     },
     {
