--- a/03optimizacion.ipynb
+++ b/03optimizacion.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOaQJ+Qs7h6Rr4TB+iP2HnR",
+      "authorship_tag": "ABX9TyMrc8d5XcLYTOEuf3jGyTmv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,17 +42,34 @@
     {
       "cell_type": "markdown",
       "source": [
-        "el algoritmo del método de la sección áurea:\n",
+        "El algoritmo del método de la sección áurea:\n",
         "\n",
         "1. Definir la función objetivo que deseas maximizar o minimizar.\n",
         "1. Establecer el intervalo de búsqueda [a, b] donde se encuentra el máximo o mínimo.\n",
         "1. Definir un valor de tolerancia epsilon que determine la precisión deseada del resultado.\n",
-        "1. Calcular el valor de la proporción áurea: $r = (\\sqrt{5} - 1) / 2$.\n",
-        "1. Calcular los puntos de división dentro del intervalo: $x_1 = a + (1 - r) * (b - a)$ y $x_2 = a + r * (b - a)$.\n",
+        "1. Calcular el valor de la proporción áurea: $\\phi = (\\sqrt{5} - 1) / 2$.\n",
+        "1. Calcular los puntos de división dentro del intervalo:\n",
+        "$x_1 = a + (1 - \\phi) * (b - a)$\n",
+        "\n",
+        "  $x_2 = a + \\phi * (b - a)$.\n",
         "1. Evaluar la función en los puntos $x_1$ y $x_2$: $f_1 = f(x_1)$ y $f_2 = f(x_2)$.\n",
         "1. Comparar los valores de $f_1$ y $f_2$ para determinar en qué subintervalo se encuentra el máximo o mínimo buscado.\n",
-        "1. Si $f_1 < f_2$, actualizar el intervalo de búsqueda estableciendo $a = x_1$ y $x_1 = x_2$. Calcular un nuevo valor para $x_2$ usando $x_2 = a + r * (b - a)$.\n",
-        "1. Si $f_1 > f_2$, actualizar el intervalo de búsqueda estableciendo $b = x_2$ y $x_2 = x_1$. Calcular un nuevo valor para $x_1$ usando $x_1 = a + (1 - r) * (b - a)$.\n",
+        "1. Si $f_1 < f_2$, actualizar el intervalo de búsqueda estableciendo\n",
+        "$a = x_1$\n",
+        "\n",
+        " $x_1 = x_2$.\n",
+        "\n",
+        " Calcular un nuevo valor para $x_2$\n",
+        "\n",
+        "  $x_2 = a + \\phi * (b - a)$.\n",
+        "1. Si $f_1 > f_2$, actualizar el intervalo de búsqueda estableciendo\n",
+        "$b = x_2$\n",
+        "\n",
+        " $x_2 = x_1$.\n",
+        "\n",
+        " Calcular un nuevo valor para $x_1$\n",
+        "\n",
+        " $x_1 = a + (1 - \\phi) * (b - a)$.\n",
         "1. Repetir los pasos 6 a 9 hasta que la diferencia entre $b$ y a sea menor que epsilon.\n",
         "1. El resultado final será el punto medio del intervalo $[a, b]$.\n",
         "\n",
@@ -133,56 +150,14 @@
     {
       "cell_type": "code",
       "source": [
-        "max = seccionaurea(f,0,4) #<---- dar los parametros en el intervalo [0,4]\n",
+        "max = seccionaurea(f,) #<---- dar los parametros en el intervalo [0,4]\n",
         "print(max)"
       ],
       "metadata": {
-        "id": "QKwKBQxtif56",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "ee45548f-7ce5-40b7-ae97-8a71af27bb1c"
+        "id": "QKwKBQxtif56"
       },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0.6180339887498949 0.3819660112501051\n",
-            "           a        x1       x2        b    f(x1)    f(x2)\n",
-            "--  --------  --------  -------  -------  -------  -------\n",
-            " 0  0         0.944272  1.52786  2.47214  1.53098  1.76472\n",
-            " 1  0.944272  1.52786   1.88854  2.47214  1.76472  1.54322\n",
-            " 2  0.944272  1.30495   1.52786  1.88854  1.75945  1.76472\n",
-            " 3  1.30495   1.52786   1.66563  1.88854  1.76472  1.71358\n",
-            " 4  1.30495   1.44272   1.52786  1.66563  1.77547  1.76472\n",
-            " 5  1.30495   1.3901    1.44272  1.52786  1.7742   1.77547\n",
-            " 6  1.3901    1.44272   1.47524  1.52786  1.77547  1.77324\n",
-            " 7  1.3901    1.42262   1.44272  1.47524  1.7757   1.77547\n",
-            " 8  1.3901    1.4102    1.42262  1.44272  1.7754   1.7757\n",
-            " 9  1.4102    1.42262   1.4303   1.44272  1.7757   1.77572\n",
-            "10  1.42262   1.4303    1.43504  1.44272  1.77572  1.77566\n",
-            "11  1.42262   1.42736   1.4303   1.43504  1.77573  1.77572\n",
-            "12  1.42262   1.42555   1.42736  1.4303   1.77572  1.77573\n",
-            "13  1.42555   1.42736   1.42848  1.4303   1.77573  1.77572\n",
-            "14  1.42555   1.42667   1.42736  1.42848  1.77572  1.77573\n",
-            "15  1.42667   1.42736   1.42779  1.42848  1.77573  1.77573\n",
-            "16  1.42667   1.4271    1.42736  1.42779  1.77573  1.77573\n",
-            "17  1.4271    1.42736   1.42753  1.42779  1.77573  1.77573\n",
-            "18  1.42736   1.42753   1.42763  1.42779  1.77573  1.77573\n",
-            "19  1.42736   1.42747   1.42753  1.42763  1.77573  1.77573\n",
-            "20  1.42747   1.42753   1.42757  1.42763  1.77573  1.77573\n",
-            "21  1.42753   1.42757   1.42759  1.42763  1.77573  1.77573\n",
-            "22  1.42753   1.42755   1.42757  1.42759  1.77573  1.77573\n",
-            "23  1.42753   1.42754   1.42755  1.42757  1.77573  1.77573\n",
-            "24  1.42754   1.42755   1.42756  1.42757  1.77573  1.77573\n",
-            "25  1.42754   1.42755   1.42755  1.42756  1.77573  1.77573\n",
-            "26  1.42755   1.42755   1.42755  1.42756  1.77573  1.77573\n",
-            "None\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
