--- a/02ENL.ipynb
+++ b/02ENL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ENL_cerrados.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPDDv/mgax9Nhvka2IT2skE",
+      "authorship_tag": "ABX9TyOZDplLlbq0rABP3u78W3dO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -186,16 +186,16 @@
         "  tabla=[]\n",
         "  columnas=['x0','x','x1','f(x0)','f(x)','f(x1)']\n",
         "  while np.abs(f(x))>tol:\n",
-        "    x=(x0+x1)/2 #Escriban aqui la ecuacion para calcular x\n",
+        "    x= #Escriban aqui la ecuacion para calcular x\n",
         "    iter=[x0,x,x1,f(x0),f(x),f(x1)]\n",
         "    tabla.append(iter)\n",
         "    it+=1\n",
         "    if f(x0)*f(x)<0:\n",
-        "      x1= x#<---- [x0,x->x1]\n",
+        "      x1= #<---- [x0,x->x1]\n",
         "    else:\n",
-        "      x0= x#<---- [x->x0,x1]\n",
+        "      x0= #<---- [x->x0,x1]\n",
         "  print(tabulate(tabla,columnas,showindex=True))\n",
-        "  return x #<---- retornar la tabla de iteraciones"
+        "  return x"
       ],
       "execution_count": 6,
       "outputs": []
