--- a/fractal_newton.ipynb
+++ b/fractal_newton.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPO2p/Ihy8oZoxcekEcFV6s",
+      "authorship_tag": "ABX9TyPQFVCFC9Ec0kXkK8mCzbWy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 1,
       "metadata": {
         "id": "wTEZSlTOgaYg"
       },
@@ -111,7 +111,7 @@
         "id": "esFbjm9ChMaD",
         "outputId": "4acbb71a-4d44-4017-9c34-9b56a4ab788c"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -146,7 +146,7 @@
         "id": "EKdsJaxCh2li",
         "outputId": "ed6152cb-406d-4025-e756-18b544d3610f"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -181,7 +181,7 @@
         "id": "x3Ua91Z5j8NX",
         "outputId": "e024a1e3-25f4-4f1b-e578-933d15899a1a"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -216,7 +216,7 @@
         "id": "cP4eMi2qkAuS",
         "outputId": "8eb904de-93a8-4d6b-a9e2-de55b66904a8"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -251,7 +251,7 @@
         "id": "Gq6kPDrZkUZF",
         "outputId": "01c4a17e-716a-4baa-fd60-8a7bf2fb454f"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -467,17 +467,18 @@
         "\n",
         "n=1000\n",
         "lienzo = np.zeros((n,n))\n",
-        "rangox=[-2, 2]\n",
-        "rangoy=[-2, 2]\n",
+        "rangox=[-1, 1]\n",
+        "rangoy=[-1, 1]\n",
         "xs=np.linspace(rangox[0],rangox[1],n) #valores reales\n",
         "ys=np.linspace(rangoy[0],rangoy[1],n) #valores imaginarios\n",
         "[x, y] = np.meshgrid(xs, ys) #combinaciones de cada valor\n",
         "\n",
         "from PIL import Image\n",
+        "\n",
         "image = Image.new(mode='RGB', size=(n, n))\n",
         "\n",
-        "f = lambda x:x**6+x**3-1\n",
-        "df = lambda x:6*x**5+3*x**2\n",
+        "f = lambda x:x**8+15*x**4-16\n",
+        "df = lambda x:8*x**7+60*x**3\n",
         "\n",
         "for i in range(n):\n",
         "  for j in range(n):\n",
@@ -485,12 +486,12 @@
         "    [xr,ks]=nr(f,df,x0)\n",
         "    image.putpixel((i, j), *25555) #<---- colocar el numero de iteraciones\n",
         "\n",
-        "image.show()"
+        "image.save('newton.jpg')"
       ],
       "metadata": {
         "id": "GzY5_nauRqyK"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     }
   ]
