--- a/03optimizacion.ipynb
+++ b/03optimizacion.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMrc8d5XcLYTOEuf3jGyTmv",
+      "authorship_tag": "ABX9TyN1rA9gnUelELQXUxF87o3g",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,21 +47,17 @@
         "1. Definir la función objetivo que deseas maximizar o minimizar.\n",
         "1. Establecer el intervalo de búsqueda [a, b] donde se encuentra el máximo o mínimo.\n",
         "1. Definir un valor de tolerancia epsilon que determine la precisión deseada del resultado.\n",
-        "1. Calcular el valor de la proporción áurea: $\\phi = (\\sqrt{5} - 1) / 2$.\n",
+        "1. Calcular el valor de la proporción áurea:\n",
+        "\n",
+        " $\\phi = (\\sqrt{5} - 1) / 2$\n",
+        "\n",
+        " $\\phi2 = \\phi^2$\n",
         "1. Calcular los puntos de división dentro del intervalo:\n",
-        "$x_1 = a + (1 - \\phi) * (b - a)$\n",
+        "$x_1 = a + \\phi^2 * (b - a)$\n",
         "\n",
         "  $x_2 = a + \\phi * (b - a)$.\n",
         "1. Evaluar la función en los puntos $x_1$ y $x_2$: $f_1 = f(x_1)$ y $f_2 = f(x_2)$.\n",
         "1. Comparar los valores de $f_1$ y $f_2$ para determinar en qué subintervalo se encuentra el máximo o mínimo buscado.\n",
-        "1. Si $f_1 < f_2$, actualizar el intervalo de búsqueda estableciendo\n",
-        "$a = x_1$\n",
-        "\n",
-        " $x_1 = x_2$.\n",
-        "\n",
-        " Calcular un nuevo valor para $x_2$\n",
-        "\n",
-        "  $x_2 = a + \\phi * (b - a)$.\n",
         "1. Si $f_1 > f_2$, actualizar el intervalo de búsqueda estableciendo\n",
         "$b = x_2$\n",
         "\n",
@@ -69,8 +65,18 @@
         "\n",
         " Calcular un nuevo valor para $x_1$\n",
         "\n",
-        " $x_1 = a + (1 - \\phi) * (b - a)$.\n",
-        "1. Repetir los pasos 6 a 9 hasta que la diferencia entre $b$ y a sea menor que epsilon.\n",
+        "  $x_1 = a + \\phi^2 * (b - a)$.\n",
+        "\n",
+        " Si no\n",
+        "\n",
+        " $a = x_1$\n",
+        "\n",
+        " $x_1 = x_2$.\n",
+        "\n",
+        " Calcular un nuevo valor para $x_2$\n",
+        "\n",
+        " $x_2 = a + \\phi^2 * (b - a)$.\n",
+        "1. Repetir los pasos 6 a 8 hasta que la diferencia entre $b$ y a sea menor que epsilon.\n",
         "1. El resultado final será el punto medio del intervalo $[a, b]$.\n",
         "\n",
         "Es importante destacar que el método de la sección áurea es aplicable tanto para encontrar el máximo como el mínimo de una función unidimensional. La diferencia radica en la comparación de los valores de la función $f_1$ y $f_2$ en el paso 7: si se busca el máximo, se utilizará la comparación $f_1 < f_2$, y si se busca el mínimo, se utilizará la comparación $f_1 > f_2$."
@@ -88,12 +94,12 @@
       "metadata": {
         "id": "hwkbvI--hEPO"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "SlSuIiOih-Lt"
       },
@@ -101,9 +107,9 @@
       "source": [
         "def seccionaurea(f, a, b, tol=1e-5):\n",
         "    phi = (np.sqrt(5) - 1) / 2\n",
-        "    x1 = a + (1 - phi) * (b - a)\n",
+        "    phi2 = phi**2\n",
+        "    x1 = a + phi2 * (b - a)\n",
         "    x2 = a + phi * (b - a)\n",
-        "    print(phi,1-phi)\n",
         "    tabla=[]\n",
         "    titulos=['a','x1','x2','b','f(x1)','f(x2)']\n",
         "    while abs(b - a) > tol:\n",
@@ -114,7 +120,7 @@
         "        else:\n",
         "            b = #<--- asignar el valor de x2, paso 9\n",
         "            x2 = x1\n",
-        "            x1 = a + (1 - phi) * (b - a)\n",
+        "            x1 = a + phi2 * (b - a)\n",
         "        it=[a,x1,x2,b,f(x1),f(x2)]\n",
         "        tabla.append(it)\n",
         "    print(tabulate(tabla,titulos,showindex=True))\n",
@@ -129,7 +135,7 @@
       "metadata": {
         "id": "oM1I5zIxiQea"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
