--- a/integralesNCtarea.ipynb
+++ b/integralesNCtarea.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNpFNPItcsx0SiQKa3TKrU0",
+      "authorship_tag": "ABX9TyNeT91qeip9MLEmy+1OIWZX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,7 +53,7 @@
         "\n",
         "Cuál será la longitud necesaria de los tubos para calentar este fluido de $20$ a $60^{\\circ}F$\n",
         "\n",
-        "$$\\mu=1500\\cdot lb$$\n",
+        "$$m=1500\\cdot lb/hr$$\n",
         "\n",
         "$$T_s=320^{\\circ}F$$\n",
         "\n",
