--- a/EDO_tarea.ipynb
+++ b/EDO_tarea.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "EDO_tarea.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOpTQcEyK1BLqC6uRqg+CgL",
+      "authorship_tag": "ABX9TyOVUhg8LwX8hcLtOC3OaVIt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
         "\\frac{dC_A}{dt}=-9420e^{-\\frac{3500}{298}}C_A\n",
         "$$\n",
         "\n",
-        "que no depende de la temperatura. Se realiza un experimento y al cabo de 25 min se encuentra en el sistema 3.4 mol/l de $A$ ¿cuál era la concentración inicial? Grafique la variación de la concentración con el tiempo."
+        "que no depende de la temperatura. Se realiza un experimento y al cabo de 25 min se encuentra en el sistema 3.XXXX mol/l de $A$. donde XXXX son los últimos 4 dígitos de tu número de cuenta ¿cuál era la concentración inicial? Grafique la variación de la concentración con el tiempo."
       ],
       "metadata": {
         "id": "QHQCIceUGTUv"
@@ -44,9 +44,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "avzhEgeDF3T5"
       },
@@ -56,13 +54,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "La concentración de un reactivo $B$ varía con el tiempo según la siguiente ecuación \n",
+        "La concentración de un reactivo $B$ varía con el tiempo según la siguiente ecuación\n",
         "\n",
         "$$\n",
         "\\frac{dC_B}{dt}=-5\\cdot 10^{15}e^{-\\frac{15000}{T}}C_B^2\n",
         "$$\n",
         "\n",
-        "y la temperatura varía con el tiempo según la ecuación $T=298+5t$. En el sistema se inicia con una concentración de $B=7mol/l$ ¿cuál es la concentración al cabo de 25 min? Grafique la variación de $C_B$ - $t$"
+        "y la temperatura varía con el tiempo según la ecuación $T=298.XXXX+5t$. donde XXXX son los últimos 4 dígitos de tu número de cuenta. El sistema se inicia con una concentración de $B=7mol/l$ ¿cuál es la concentración de B al cabo de 25 min? Grafique la variación de $C_B$ - $t$"
       ],
       "metadata": {
         "id": "iiwrXgaGH_hV"
@@ -70,9 +68,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "i5VVclRUJaFc"
       },
