--- a/07EDO.ipynb
+++ b/07EDO.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPSAaOH+vccyIlUqWqpSM/S",
+      "authorship_tag": "ABX9TyMWx+n2Lq589XMWK+MMdAtf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -96,7 +96,7 @@
       },
       "source": [
         "def f(T,t):\n",
-        "    return -0.25*(T-20)"
+        "    return"
       ],
       "execution_count": null,
       "outputs": []
@@ -109,11 +109,11 @@
       "source": [
         "t0 =0 # valor inicial de tiempo\n",
         "t1 =10 # valor final del tiempo\n",
-        "T0 =[90] # condiciones iniciales de\n",
+        "T0 =[] # condiciones iniciales de\n",
         "\n",
         "tiempo =np.linspace (t0,t1,11) #11 es para 10 pasos\n",
         "# llamada a la funcion odeint\n",
-        "sol = odeint(f,T0,tiempo )\n",
+        "sol = odeint(f,T0, )\n",
         "sol"
       ],
       "execution_count": null,
