--- a/01Interpolacion.ipynb
+++ b/01Interpolacion.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM8TYz9fC/Edfv+QbPw4tMn",
+      "authorship_tag": "ABX9TyM6QvFGLktfLCMfkf7VzoTd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -231,7 +231,7 @@
         "from scipy.interpolate import lagrange\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -243,7 +243,7 @@
         "x=np.linspace(-1,1,15)\n",
         "y=np.exp(-(5*x)**2) + x #1/(1+25*x**2)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -256,7 +256,7 @@
       "metadata": {
         "id": "UvZeuKHyq--O"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -287,7 +287,7 @@
         "\n",
         "ysc= #<---- interpolacion"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -304,6 +304,121 @@
       ],
       "metadata": {
         "id": "iyavkaFcXm1x"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Ejemplo interpolación spline cúbico"
+      ],
+      "metadata": {
+        "id": "6CQCJmruHgY_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Los siguientes datos definen la concentración de oxígeno disuelto en agua como función de la temperatura:\n",
+        "\n",
+        "$$\n",
+        "\\begin{array}{l|c|c|c|c|c|c}\n",
+        "\\text{T,ºC}&0&8&16&24&32&40\\\\\n",
+        "\\hline\n",
+        "\\text{o, mg/L}&14.621&11.843&9.870&8.418&7.305&6.413\n",
+        "\\end{array}\n",
+        "$$\n",
+        "\n",
+        "Estime o(27) usando:\n",
+        ">a) interpolación lineal,\n",
+        "\n",
+        ">b) polinomio de interpolación de Lagrange y\n",
+        "\n",
+        ">c) trazadores cúbicos.\n",
+        "\n",
+        "Observe que el resultado exacto es 7.968 mg/L."
+      ],
+      "metadata": {
+        "id": "1H8BWrOLHonJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "from scipy.interpolate import interp1d,lagrange\n",
+        "import matplotlib.pyplot as plt"
+      ],
+      "metadata": {
+        "id": "spRAK-l4HgCu"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "T = np.array([0,8,16,24,32,40])\n",
+        "O2 = np.array([14.621,11.843,9.870,8.418,7.305,6.413])\n",
+        "Ti = 27"
+      ],
+      "metadata": {
+        "id": "xXxX2GgQLGDQ"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#            interpolacion lineal\n",
+        "p_lineal = #<----crear el polinomio lineal\n",
+        "O2_lineal = #<----interpolar\n",
+        "print(O2_lineal)"
+      ],
+      "metadata": {
+        "id": "jaFJ28-4L5sH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#            interpolacion polinomica de Lagrange\n",
+        "p_lagrange = #<----crear el polinomio de Lagrange\n",
+        "O2_lagrange = #<----interpolar\n",
+        "print(O2_lagrange)"
+      ],
+      "metadata": {
+        "id": "Nc-40RShMh5_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#            interpolacion Spline cubico\n",
+        "p_spline = #<----crear polinomio Spline cubico\n",
+        "O2_spline = #<----interpolar\n",
+        "print(O2_spline)"
+      ],
+      "metadata": {
+        "id": "0rXGYPCwM8Gg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#graficar\n",
+        "plt.plot(,,'o')"
+      ],
+      "metadata": {
+        "id": "yjaHLeFkLvzf"
       },
       "execution_count": null,
       "outputs": []
