--- a/01Interpolacion.ipynb
+++ b/01Interpolacion.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM6QvFGLktfLCMfkf7VzoTd",
+      "authorship_tag": "ABX9TyP1s52rsmxnc/f8ulLr6udL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -227,11 +227,10 @@
       },
       "source": [
         "import numpy as np\n",
-        "from scipy import interpolate\n",
-        "from scipy.interpolate import lagrange\n",
+        "from scipy.interpolate import lagrange,CubicSpline\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -240,10 +239,11 @@
         "id": "nVyyvW8VGj0w"
       },
       "source": [
-        "x=np.linspace(-1,1,15)\n",
-        "y=np.exp(-(5*x)**2) + x #1/(1+25*x**2)"
+        "x = np.linspace(-1,1,15)\n",
+        "y = np.exp(-(5*x)**2) + x #1/(1+25*x**2)\n",
+        "xi = -0.95"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -251,7 +251,9 @@
       "source": [
         "pol=lagrange() #<---- polinomio de lagrange\n",
         "xs =np.linspace() #<--- definir el vector\n",
-        "ypol= #<---- interpolacion"
+        "ypol= #<---- interpolacion\n",
+        "yi = #<----- interpolar en xi\n",
+        "print(yi)"
       ],
       "metadata": {
         "id": "UvZeuKHyq--O"
@@ -265,12 +267,12 @@
         "id": "s-ECy_iQHBN8"
       },
       "source": [
-        "plt.plot(x,y,'o',xs,ypol,'--')\n",
+        "plt.plot(x,y,'o',xs,ypol,'--',xi,yi,'o')\n",
         "plt.grid()\n",
         "plt.legend(['Data','Lagrange'])\n",
         "plt.xlabel('x')\n",
         "plt.ylabel('y')\n",
-        "plt.ylim([-2,2])\n",
+        "plt.ylim([-2,4])\n",
         "plt.title('Runge phenomenon')\n",
         "plt.show()"
       ],
@@ -283,9 +285,11 @@
         "id": "zWiPhbHRW6lA"
       },
       "source": [
-        "sc=interpolate.interp1d(x,y,kind='cubic') #<---- polinomio de interpolacion cubica\n",
+        "sc=CubicSpline(x,y) #<---- polinomio de interpolacion cubica\n",
         "\n",
-        "ysc= #<---- interpolacion"
+        "ysc= sc(xs)#<---- interpolacion\n",
+        "yi = sc(xi) #<----- interpolar en xi\n",
+        "print(yi)"
       ],
       "execution_count": null,
       "outputs": []
@@ -293,7 +297,7 @@
     {
       "cell_type": "code",
       "source": [
-        "plt.plot(x,y,'o',xs,ypol,'--') #<--- agregar spline cubico\n",
+        "plt.plot(x,y,'o',xs,ypol,'--',xs,ysc,'-.',xi,yi,'o') #<--- agregar spline cubico\n",
         "plt.grid()\n",
         "plt.legend(['Data','Lagrange','Spline cubic'])\n",
         "plt.xlabel('x')\n",
@@ -347,13 +351,13 @@
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
-        "from scipy.interpolate import interp1d,lagrange\n",
+        "from scipy.interpolate import interp1d,lagrange,CubicSpline\n",
         "import matplotlib.pyplot as plt"
       ],
       "metadata": {
         "id": "spRAK-l4HgCu"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -366,7 +370,7 @@
       "metadata": {
         "id": "xXxX2GgQLGDQ"
       },
-      "execution_count": 5,
+      "execution_count": 2,
       "outputs": []
     },
     {
