--- a/01Interpolacion.ipynb
+++ b/01Interpolacion.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP1s52rsmxnc/f8ulLr6udL",
+      "authorship_tag": "ABX9TyMJO2yfi9pIpwOEbsFrY3Vj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -285,7 +285,7 @@
         "id": "zWiPhbHRW6lA"
       },
       "source": [
-        "sc=CubicSpline(x,y) #<---- polinomio de interpolacion cubica\n",
+        "sc = CubicSpline() #<---- polinomio de interpolacion cubica\n",
         "\n",
         "ysc= sc(xs)#<---- interpolacion\n",
         "yi = sc(xi) #<----- interpolar en xi\n",
